RESOLVED FIXED 214805
[GTK] API test WebKit.OnDeviceChangeCrash is flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=214805
Summary [GTK] API test WebKit.OnDeviceChangeCrash is flaky timeout
Diego Pino
Reported 2020-07-26 10:16:34 PDT
See https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20%28Tests%29/builds/14898/steps/API%20tests/logs/stdio The test was flaky too in other recent GTK Tests builds such as #14861 and #14863. (WebKitWebProcess:16523): Gdk-[1;33mWARNING[0m **: [34m21:38:05.150[0m: The program 'WebKitWebProcess' received an X Window System error. This probably reflects a bug in the program. The error was 'BadMatch (invalid parameter attributes)'. (Details: serial 202 error_code 8 request_code 148 (GLX) minor_code 34) (Note to programmers: normally, X errors are reported asynchronously; that is, you will receive the error a while after causing it. To debug your program, run it with the GDK_SYNCHRONIZE environment variable to change this behavior. You can then get a meaningful backtrace from your debugger if you break on the gdk_x_error() function.) **FAIL** WebKit.OnDeviceChangeCrash ../../Tools/TestWebKitAPI/Tests/WebKit/UserMedia.cpp:157 Value of: !didCrash Actual: false Expected: true
Attachments
Lauro Moura
Comment 1 2021-11-26 13:44:11 PST
This test was passing consistently from revisions 238236@main (earliest known result in the current buildbot) to 243130@main (mid-October 2021). But between 243131@main and 243249@main (both inclusive), it started a consistent timeout spell, becoming a flaky timeout since. This consistent timeout spell was related to the ccache issues generating invalid builds, as many unrelated tests also failed, but given the flakiness afterward, the commit that introduced the issue is likely in this range. Unfortunately, couldn't reproduce locally yet. In WPE, it's much less flaky, with less than 1 timeout per hundred builds.
Vitaly Dyackhov
Comment 2 2023-06-21 07:05:49 PDT
Vitaly Dyackhov
Comment 3 2023-06-28 02:29:11 PDT
EWS
Comment 4 2023-06-28 03:48:18 PDT
Committed 265577@main (e289c4e0a33a): <https://commits.webkit.org/265577@main> Reviewed commits have been landed. Closing PR #15365 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.