[GTK] API test WebKit.OnDeviceChangeCrash is flaky timeout https://bugs.webkit.org/show_bug.cgi?id=214805

Reviewed by Philippe Normand.

When creating a `PlatformWebView` with a related "WKPage", we need to
copy into the webview configuration not only the context and the page
group, but also the page preferenes.

* Tools/TestWebKitAPI/glib/TestExpectations.json:
* Tools/TestWebKitAPI/gtk/PlatformWebViewGtk.cpp:
(TestWebKitAPI::PlatformWebView::PlatformWebView):
* Tools/TestWebKitAPI/wpe/PlatformWebViewWPE.cpp:
(TestWebKitAPI::PlatformWebView::PlatformWebView):

Canonical link: https://commits.webkit.org/265577@main